Added references from Efi Fogel

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -518,6 +518,37 @@ journal = {The International Journal of Robotics Research}
 	Volume = {28},
 	Year = {2009}}
 
+@article{Be10,
+  author      = {Eric Berberich and Efi Fogel and Dan Halperin and
+                 Michael Kerber and Ophir Setter},
+  title       = {Arrangements on Parametric Surfaces {II}: Concretizations
+                 and Applications},
+  journal     = {Mathematics in Computer Science},
+  publisher   = {Birkh\"{a}user Basel},
+  issn        = {1661-8270},
+  keyword     = {Mathematics},
+  pages       = {67--91},
+  volume      = {4},
+  issue       = {1},
+  url         = {\url{http://dx.doi.org/10.1007/s11786-010-0043-4}},
+  year        = {2010}
+}
+
+@article{Be10a,
+  author      = {Eric Berberich and Efi Fogel and Dan Halperin and
+                 Kurt Mehlhorn and Ron Wein},
+  title       = {Arrangements on Parametric Surfaces {I}: General Framework
+                 and Infrastructure},
+  journal     = {Mathematics in Computer Science},
+  publisher   = {Birkh\"{a}user Basel},
+  issn        = {1661-8270},
+  pages       = {45--66},
+  volume      = {4},
+  issue       = {1},
+  url         = {\url{http://dx.doi.org/10.1007/s11786-010-0042-5}},
+  year        = {2010}
+}
+
 @book{Be78,
 	Author = {Arthur L. Besse},
 	File = {:/media/data/documents/eBooks/Selected Books/Geometry/Manifolds All of Whose Geodesics are Closed - Besse A.L.pdf:PDF},
@@ -953,7 +984,17 @@ doi={10.1109/ROBOT.1989.99985}
   url = {http://doc.cgal.org/4.3/Manual/packages.html}
 }
 
-@incollection{CGAL-arr,
+@incollection{CGAL-arr-4.1,
+  author      = {Ron Wein and Efi Fogel and Baruch Zukerman and Dan Halperin},
+  booktitle   = {\fontfamily{cmr} {\slshape\scshape Cgal} User and Reference Manual},
+  publisher   = {\textsc{Cgal} Editorial Board},
+  title       = {{2D} Arrangements},
+  year        = {2012},
+  edition     = {{4.1}},
+  note        = {\url{http://www.cgal.org/Manual/4.1/doc_html/cgal_manual/packages.html\#Pkg:Arrangement2}}
+}
+
+@incollection{CGAL-arr-4.3,
   author = {Ron Wein and Eric Berberich and Efi Fogel and Dan Halperin and Michael Hemmer and Oren Salzman and Baruch Zukerman},
   title = {{2D} Arrangements},
   publisher = {{CGAL Editorial Board}},
@@ -2077,7 +2118,6 @@ journal = {IMA Journal of Numerical Analysis}
 }
 
 @book{Fo12,
-  added-at = {2012-04-14T00:00:00.000+0200},
   author = {Fogel, Efi and Halperin, Dan and Wein, Ron},
   biburl = {http://www.bibsonomy.org/bibtex/2f8ea12867de9bc8def79eafe4ac82097/dblp},
   ee = {http://dx.doi.org/10.1007/978-3-642-17283-0},
