Minor polish - improve over/underfull

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -892,7 +892,7 @@ keywords = "Differential geometry "
 @INPROCEEDINGS{Br89,
 author={Brost, R.C.},
 booktitle={Proceedings of IEEE International Conference on Robotics and Automation, 1989},
-title={Computing metric and topological properties of configuration-space obstacles},
+title={Computing metric and topological properties of configuration space obstacles},
 year={1989},
 pages={170-176 vol.1},
 keywords={kinematics;robots;topology;12 to 135 s;configuration-space obstacles;metric properties;polygon features;robots;topological properties;Arithmetic;Computer science;Fingers;Kinematics;Operating systems;Path planning;Performance analysis;Robots;Solids;Testing},
@@ -3354,7 +3354,7 @@ journal = {IMA Journal of Numerical Analysis}
 	Date-Added = {2012-05-29 18:02:57 +0200},
 	Date-Modified = {2012-05-29 18:03:32 +0200},
 	Keywords = {motion planning, 4thesis},
-	Note = {Available at http://planning.cs.uiuc.edu/},
+	url = {http://planning.cs.uiuc.edu/},
 	Publisher = {Cambridge University Press},
 	Title = {Planning Algorithms},
 	Year = {2006}
