Polished several entries

--- a/personalRef.bib
+++ b/personalRef.bib
@@ -530,7 +530,7 @@ journal = {The International Journal of Robotics Research}
   pages       = {67--91},
   volume      = {4},
   issue       = {1},
-  url         = {\url{http://dx.doi.org/10.1007/s11786-010-0043-4}},
+  url         = {http://dx.doi.org/10.1007/s11786-010-0043-4},
   year        = {2010}
 }
 
@@ -545,7 +545,7 @@ journal = {The International Journal of Robotics Research}
   pages       = {45--66},
   volume      = {4},
   issue       = {1},
-  url         = {\url{http://dx.doi.org/10.1007/s11786-010-0042-5}},
+  url         = {http://dx.doi.org/10.1007/s11786-010-0042-5},
   year        = {2010}
 }
 
@@ -1803,7 +1803,7 @@ language={English}
 }
 
 @article{Dy90,
-author = {DYN, NIRA and LEVIN, DAVID and RIPPA, SAMUEL},
+author = {Dyn, Nira and Levin, David and Rippa, Samuel},
 title = {Data Dependent Triangulations for Piecewise Linear Interpolation},
 volume = {10},
 number = {1},
