--- a/personalRef.bib
+++ b/personalRef.bib
@@ -30,6 +30,7 @@
 	Volume = {9},
 	Year = {2003}
 }
+
 @inproceedings{Am00,
 	Acmid = {336207},
 	Address = {New York, NY, USA},
@@ -50,7 +51,6 @@
 	Url = {http://doi.acm.org/10.1145/336154.336207},
 	Year = {2000}
 }
-
 @inproceedings{Am01,
 	Acmid = {376986},
 	Address = {New York, NY, USA},
@@ -464,6 +464,25 @@ pages = {92-112},
 year = {1990},
 doi = {10.1177/027836499000900104},
 journal = {The International Journal of Robotics Research}
+}
+
+@article{Be00,
+title = "Piecewise optimal triangulation for the approximation of scattered data in the plane",
+journal = "Computer Aided Geometric Design",
+volume = "17",
+number = "8",
+pages = "767 - 787",
+year = "2000",
+issn = "0167-8396",
+doi = "http://dx.doi.org/10.1016/S0167-8396(00)00026-1",
+url = "http://www.sciencedirect.com/science/article/pii/S0167839600000261",
+author = "Martin Bertram and James C. Barnes and Bernd Hamann and Kenneth I. Joy and Helmut Pottmann and Dilinur Wushour",
+keywords = "Triangulation",
+keywords = "Data-dependent triangulation",
+keywords = "Approximation",
+keywords = "Hierarchical approximation",
+keywords = "Quadratic polynomials",
+keywords = "Clustering "
 }
 
 @article{Be02,
