--- a/personalRef.bib
+++ b/personalRef.bib
@@ -1280,6 +1280,28 @@ doi={10.1109/ROBOT.1989.99985}
 	Year = {1985}
 }
 
+@inproceedings{Ch98,
+  added-at = {2009-09-17T00:00:00.000+0200},
+  author = {Chazelle, Bernard},
+  biburl = {http://www.bibsonomy.org/bibtex/2238635f2ef3beaf70f174e3231fdcc4c/dblp},
+  booktitle = {ISAAC},
+  description = {dblp},
+  editor = {Chwa, Kyung-Yong and Ibarra, Oscar H.},
+  ee = {http://dx.doi.org/10.1007/3-540-49381-6_1},
+  interhash = {4d5b666085deec4d4ecd9105b4e02795},
+  intrahash = {238635f2ef3beaf70f174e3231fdcc4c},
+  isbn = {3-540-65385-6},
+  keywords = {dblp},
+  pages = {1-3},
+  publisher = {Springer},
+  series = {Lecture Notes in Computer Science},
+  timestamp = {2009-09-17T00:00:00.000+0200},
+  title = {The Discrepancy Method.},
+  url = {http://dblp.uni-trier.de/db/conf/isaac/isaac98.html#Chazelle98},
+  volume = 1533,
+  year = 1998
+}
+
 @inproceedings{Ch99,
 	Acmid = {304894},
 	Address = {New York, NY, USA},
@@ -2134,22 +2156,6 @@ doi={10.1109/ROBOT.1989.99985}
 	Year = {2005}
 }
 
-@conference{Ed98,
-	Author = {Herbert Edelsbrunner},
-	Booktitle = {LATIN'98: Theoretical Informatics},
-	Crossref = {Ed94},
-	Date-Modified = {2011-03-25 08:40:02 +0100},
-	Owner = {drorata},
-	Pages = {119--132},
-	Printed = {1},
-	Publisher = {Springer},
-	Timestamp = {2010.03.04},
-	Title = {Shape reconstruction with Delaunay complex},
-	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
-	Volume = {1380/1998},
-	Year = {1998}
-}
-
 @book{Go98,
 	Author = {Samuel I. Goldberg},
 	Date-Modified = {2011-06-01 13:30:00 +0200},
@@ -2196,6 +2202,22 @@ doi={10.1109/ROBOT.1989.99985}
 	Publisher = {Springer},
 	Title = {A Singular Introduction to Commutative Algebra},
 	Year = {2002}
+}
+
+@conference{Ed98,
+	Author = {Herbert Edelsbrunner},
+	Booktitle = {LATIN'98: Theoretical Informatics},
+	Crossref = {Ed94},
+	Date-Modified = {2011-03-25 08:40:02 +0100},
+	Owner = {drorata},
+	Pages = {119--132},
+	Printed = {1},
+	Publisher = {Springer},
+	Timestamp = {2010.03.04},
+	Title = {Shape reconstruction with Delaunay complex},
+	Url = {http://www.springerlink.com/content/p705g1x4n04820k8/fulltext.pdf},
+	Volume = {1380/1998},
+	Year = {1998}
 }
 
 @book{Gr10,
@@ -2860,6 +2882,26 @@ doi={10.1109/ROBOT.1989.99985}
 	Year = {2008}
 }
 
+@article{Ka11,
+ author = {Karaman, Sertac and Frazzoli, Emilio},
+ title = {Sampling-based Algorithms for Optimal Motion Planning},
+ journal = {Int. J. Rob. Res.},
+ issue_date = {June      2011},
+ volume = {30},
+ number = {7},
+ month = jun,
+ year = {2011},
+ issn = {0278-3649},
+ pages = {846--894},
+ numpages = {49},
+ url = {http://dx.doi.org/10.1177/0278364911406761},
+ doi = {10.1177/0278364911406761},
+ acmid = {2000209},
+ publisher = {Sage Publications, Inc.},
+ address = {Thousand Oaks, CA, USA},
+ keywords = {Motion planning, optimal path planning, random geometric graphs, sampling-based algorithms},
+}
+
 @inproceedings{Ka12,
 	Acmid = {2261292},
 	Address = {New York, NY, USA},
@@ -2914,6 +2956,18 @@ doi={10.1109/ROBOT.1989.99985}
 	Volume = {36},
 	Year = {1996}
 }
+
+@ARTICLE{Ka96a,
+author={Kavraki, L. and Svestka, P. and Latombe, J.-C. and Overmars, M.H.},
+journal={Robotics and Automation, IEEE Transactions on},
+title={Probabilistic roadmaps for path planning in high-dimensional configuration spaces},
+year={1996},
+volume={12},
+number={4},
+pages={566-580},
+keywords={graph theory;learning (artificial intelligence);mobile robots;path planning;probability;collision-free configurations;goal configurations;graph;high-dimensional configuration spaces;holonomic robot;learning phase;local planner;motion planning;multi-DOF planar articulated robots;path planning;probabilistic roadmaps;query phase;robots;start configurations;static workspaces;Computer science;Joining processes;Laboratories;Layout;Motion planning;Orbital robotics;Path planning;Robots;Workstations},
+doi={10.1109/70.508439},
+ISSN={1042-296X}}
 
 @article{Ka98,
 	Abstract = {We provide an analysis of a path planning method which uses probabilistic roadmaps. This method has proven very successful in practice, but the theoretical understanding of its performance is still limited. Assuming that a path γ exists between two configurations a and b of the robot, we study the dependence of the failure probability to connect a and b, on: 1) the length of γ; 2) the distance function of γ from the obstacles; 3) the number of nodes N of the probabilistic roadmap constructed. Importantly, our results do not depend strongly on local irregularities of the configuration space, as was the case with previous analysis. These results are illustrated with a simple but illuminating example. In this example, we provide estimates for N, the principal parameter of the method, in order to achieve failure probability within prescribed bounds. We also compare, through this example, the different approaches to the analysis of the planning method.},
@@ -3176,6 +3230,14 @@ doi={10.1109/ROBOT.1989.99985}
 	Title = {Geodesic Voronoi Diagrams on Parametric Surfaces},
 	Volume = {0},
 	Year = {1997}
+}
+
+@inproceedings{La00,
+    author = {Steven M. Lavalle and James J. Kuffner},
+    title = {Rapidly-Exploring Random Trees: Progress and Prospects},
+    booktitle = {Algorithmic and Computational Robotics: New Directions},
+    year = {2000},
+    pages = {293--308}
 }
 
 @book{La06,
@@ -4289,6 +4351,21 @@ doi={10.1109/ROBOT.1989.99985}
 	Year = {2000}
 }
 
+@incollection{Ro02,
+author={Geraerts, Roland and Overmars, MarkH.},
+booktitle={Algorithmic Foundations of Robotics V},
+title={A Comparative Study of Probabilistic Roadmap Planners},
+year={2004},
+volume={7},
+pages={43-58},
+isbn={978-3-540-40476-7},
+series={Springer Tracts in Advanced Robotics},
+editor={Boissonnat, Jean-Daniel and Burdick, Joel and Goldberg, Ken and Hutchinson, Seth},
+url={http://www.staff.science.uu.nl/~gerae101/pdf/compare.pdf},
+doi={10.1007/978-3-540-45058-0_4},
+publisher={Springer Berlin Heidelberg}
+}
+
 @book{Ro70,
 	Author = {R. Tyrrell Rockafeelar},
 	Date-Modified = {2011-06-01 13:26:06 +0200},
@@ -5058,6 +5135,25 @@ pages = {762-779},
 year = {2000},
 doi = {10.1177/02783640022067157},
 journal = {The International Journal of Robotics Research}
+}
+
+@article{Wo97,
+ author = {Wong, Tien-Tsin and Luk, Wai-Shing and Heng, Pheng-Ann},
+ title = {Sampling with Hammersley and Halton Points},
+ journal = {J. Graph. Tools},
+ issue_date = {1997},
+ volume = {2},
+ number = {2},
+ month = nov,
+ year = {1997},
+ issn = {1086-7651},
+ pages = {9--24},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1080/10867651.1997.10487471},
+ doi = {10.1080/10867651.1997.10487471},
+ acmid = {272319},
+ publisher = {A. K. Peters, Ltd.},
+ address = {Natick, MA, USA},
 }
 
 @article{Wolter1979,
